--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -8,9 +8,9 @@
     </script>
     <style>
         body { height: 100vh; }
-        * { cursor: url(/static/turdle.cur) 0 0, default; }
+        * { cursor: url(/static/pawscursor.png) 0 0, default; }
     </style>
-    <link rel="shortcut icon" href="/static/assets/tort.ico">
+    <link rel="shortcut icon" href="/static/assets/pawscursor.png">
 
 </head>
 
@@ -29,79 +29,10 @@
                     About Pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/tanay">Tanay </a>®
+                    <a class="dropdown-item" href="{{ url_for('connor') }}">Connor</a>
                 </div>
             </li>
 
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Nathan
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/ngreet">Mini Lab</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1mpSTPoxFycOyKC40fRmoi1WsmJexhgYlY1nKJLu3yh0/edit">Video Notes</a>
-                    <a class="dropdown-item" href="/nabout">About Nathan</a>
-                </div>
-            </li>
-
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Colin
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/cgreet">Mini Lab</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1wpuYBTp1CUIIosRJWoNKpJEOn8X3EbprnMGlf24Rjkw/edit?usp=sharing">Video Notes</a>
-                    <a class="dropdown-item" href="/cabout">About Colin</a>
-                </div>
-            </li>
-
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Everitt
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/egreet">Mini Lab</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1daZ_8eHmGquddiJmqGEpUVh2x08iiIuxZk-UYRzNojo/edit?usp=sharing">Video Notes</a>
-                    <a class="dropdown-item" href="/eabout">About Everitt</a>
-                </div>
-            </li>
-
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Jackson
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/jgreet">Mini Lab</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1OfpTCseSqM57-1gCiBApLrFuTqxmW7MQxsBs5ljFsY4/edit?usp=sharing">Video Notes</a>
-                    <a class="dropdown-item" href="/jabout">About Jackson</a>
-                </div>
-            </li>
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Mini-Labs
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/unsignedaddition">Signed and Unsigned Addition</a>
-                    <a class="dropdown-item" href="/binary">Binary Clicker</a>
-                    <a class="dropdown-item" href="/colorcode">Color Codes</a>
-                    <a class="dropdown-item" href="/greet">Mini-Lab1(Greet page)</a>
-                    <a class="dropdown-item" href=/rgb>RGB</a>
-                    <a class="dropdown-item" href=/logicgates>Logic Gates</a>
-                    <a class="dropdown-item" href="https://docs.google.com/document/d/1tz7A3Lp6vaa3a2ihFki3gpXrv0AbuLO8AQ0fRD_HylU/edit">Brain Write</a>
-                    <a class="dropdown-item" href="https://docs.google.com/drawings/d/1mLX47ycMErdh59YrlnN0HBTh9hMyTQiEKBE57kt6F_Y/edit">WireFrame</a>
-                    <a class="dropdown-item" href="https://www.loom.com/share/18e1d69820c94d1c984c99982b04e734">Video Journal 0</a>
-                </div>
-            </li>
         </div>
 
     </div>
