--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -18,13 +18,13 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/templates/cssFiles/style.css">
+    <link rel="icon" href="/static/assets/pawscursor.png">
 
 
 
     <title>{{ name }} | {{ project }} </title>
-    <link rel="shortcut icon" href="/static/assets/tort.ico">
+    <link rel="shortcut icon" href="/static/assets/pawscursor.png">
 
 </head>
 
@@ -32,42 +32,42 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row justify-content-end" style="padding: 2%;">
-        <div class="col-2" style="text-align: right;">
-            {% block info %}
-            <!-- notice jinja style variables used in href's -->
-            <a><h5>{{name}}</h5></a>
-            <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
-            <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
-            <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
-            {% endblock %}
+    <div class="container-fluid">
+        <div class="row justify-content-end" style="padding: 2%;">
+            <div class="col-2" style="text-align: right;">
+                {% block info %}
+                    <!-- notice jinja style variables used in href's -->
+                    <a><h5>{{name}}</h5></a>
+                    <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
+                    <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
+                    <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
+                {% endblock %}
+            </div>
+        </div>
+
+        <div class="product" style="margin-top: 2%;">
+            <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
+
+                <div class="col-8" >
+                    <h1>{{ project }} Project</h1>
+                </div>
+
+            </div>
+
+            <div class="row" style="padding-left: 10%;">
+                {% block links %}
+                    <div class="col-3">
+                        <a href="https://github.com/connorw72/food" class="btn">Overview</a>
+                    </div>
+
+                    <div class="col-3">
+                        <a href="{{ repo }}" class="btn">Github</a>
+                    </div>
+                {% endblock %}
+            </div>
+
         </div>
     </div>
-
-    <div class="product" style="margin-top: 2%;">
-        <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
-
-            <div class="col-8" >
-                <h1>{{ project }} Project</h1>
-            </div>
-
-        </div>
-
-        <div class="row" style="padding-left: 10%;">
-            {% block links %}
-            <div class="col-3">
-                <a href="https://github.com/connorw72/food" class="btn">Overview</a>
-            </div>
-
-            <div class="col-3">
-                <a href="{{ repo }}" class="btn">Github</a>
-            </div>
-            {% endblock %}
-        </div>
-
-    </div>
-</div>
 {% endblock %}
 
 </div>
