Toggle Page Updated (Need to Add Images, having problems)

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -30,6 +30,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('connor') }}">Connor</a>
+                    <a class="dropdown-item" href="{{ url_for('tanay') }}">Tanay</a>
                 </div>
             </li>
 
