--- a/templates/tanay.html
+++ b/templates/tanay.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Tanay</title>
+
+<script>
+    function mask() {
+        document.getElementById('place')
+        .src="/static/assets/connormask.jpg";
+    }
+    function nomask() {
+        document.getElementById('place')
+        .src="/static/assets/nomaskconnor.jpg";
+    }
+</script>
+
 <h1>Meet Tanay Rayavarapu</h1>
     <h2>Deployment Manager</h2>
 </head>
 <body>
-<style>
-
-</style>
+<div class="container">
+    <div class="row justify-content-md-center" style="align:center">
+        <table class="table">
+            <thead>
+            <tr>
+                <th style="text-align:center">Tanay</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
+                    <div>
+                        <button onclick="mask()">Mask</button>
+                        <button onclick="nomask()">No Mask</button>
+                    </div>
+                </td>
+            </tr>
 </body>
 </html>
