Colin about page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -31,6 +31,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('connor') }}">Connor</a>
                     <a class="dropdown-item" href="{{ url_for('tanay') }}">Tanay</a>
+                    <a class="dropdown-item" href="{{ url_for('colin')}}">Colin</a>
                 </div>
             </li>
 
