--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,6 +12,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
             <a class="nav-link" href={{ url_for('newapi') }}>Historical Weather API</a>
+            <a class="nav-link" href={{ url_for('genius') }}>Genius API</a>
             <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
             <a class="nav-link" href={{ url_for('khushi') }}>Khushi</a>
             <a class="nav-link" href="/stub">Stub</a>
