--- a/templates/KianAboutMe.html
+++ b/templates/KianAboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About Us: Kian</title>
 </head>
 <body>
 
