--- a/templates/jason.html
+++ b/templates/jason.html
@@ -6,6 +6,10 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
+    <body style="background-color:white;">
+    <p style="text-align: center; font-size: 100px; font-weight: 600; color: rebeccapurple">
+       Jason Kaplan's Krib
+    </p>
     </div>
     <p align="center">
         <iframe
@@ -15,6 +19,8 @@
         ></iframe>
     </p>
     </div>
+
+
 {% endblock %}
 
 
