--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,6 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('rohan') }}>Rohan</a>
             <a class="nav-link" href={{ url_for('adi') }}>ADI</a>
             <a class="nav-link" href={{ url_for('jason') }}>Jason</a>
+            <a class="nav-link" href={{ url_for('divya') }}>Divya</a>
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
         </div>
