finished my about me page and added notes

--- a/templates/divya.html
+++ b/templates/divya.html
@@ -8,9 +8,18 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <h1>Divyanshi</h1>
+    <h1><center>Divyanshi</center></h1>
+    <body style="background-color:lightpink;">
+</div>
+<p align="center">
+    <iframe
+            width="1000"
+            height="500"
+            src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing"
+    ></iframe>
+</p>
+    </div>
 {% endblock %}
-
 <!- This is turning off birds background from base.html -->
 {% block background %}
 {% endblock %}
