--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -33,7 +33,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);
+            background-color: var(--grey);+-+
             color: var(--white);
             z-index: 5;
         }
@@ -107,6 +107,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             top: 7.75%;
             width: 200px;
             position: fixed;
+            alignment: left;
             background-color: #1da1f2;
             overflow-x: hidden;
             padding-top: 20px;
@@ -130,6 +131,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
+
+
 <div class="container-fluid">
     <div class="row justify-content-end" style="padding: 2%;">
         <div class="col-2" style="text-align: right;">
