--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,6 +19,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/evan/">Evan</a>
                         <a class="dropdown-item" href="/leah/">Leah</a>
+                        <a class="dropdown-item" href="/simon/">Simon</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/">Evan</a>
                         <a class="dropdown-item" href="/">Leah</a>
