Pranav ABout ME

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -32,6 +32,7 @@
                     <a class="dropdown-item" href="{{ url_for('connor') }}">Connor</a>
                     <a class="dropdown-item" href="{{ url_for('tanay') }}">Tanay</a>
                     <a class="dropdown-item" href="{{ url_for('colin')}}">Colin</a>
+                    <a class="dropdown-item" href="{{ url_for('pranav')}}">Pranav</a>
                 </div>
             </li>
 
