--- a/templates/newapi.html
+++ b/templates/newapi.html
@@ -27,9 +27,9 @@
                 <thead>
                 <tr>
                     <th>dt</th>
-                    <th>Humidity</th>
+                    <th>Temperature</th>
                     <th>Pressure</th>
-                    <th>Averages</th>
+                    <th>Average</th>
                     <th>Wind Speed</th>
             </thead>
                 <tbody>
@@ -38,14 +38,8 @@
                         {% for info in data %}
                             <tr>
                                 <td> {{info.dt}} </td>
-                                <td> {{info.humidity}} </td>
-                                <td> {{info.pressure}} </td>
                                 <td> {{info.temp}} </td>
-                                <td> {{info.average}} </td>
-                                <td> {{info.average_max}} </td>
-                                <td> {{info.average_min}} </td>
-                                <td> {{info.record_max}} </td>
-                                <td> {{info.record_min}} </td>
+                                <td> {{info.pressure}} </td>
                                 <td> {{info.wind_speed}} </td>
                             </tr>
                         {% endfor %}
