--- a/templates/tanay.html
+++ b/templates/tanay.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+{% extends "layouts/navbar.html" %}
+
+{% block body %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +10,11 @@
 <script>
     function mask() {
         document.getElementById('place')
-        .src="/static/assets/connormask.jpg";
+        .src="/static/assets/tanaymask.jpg";
     }
     function nomask() {
         document.getElementById('place')
-        .src="/static/assets/nomaskconnor.jpg";
+        .src="/static/assets/tanaymaskoff.jpg";
     }
 </script>
 
@@ -30,7 +33,7 @@
             <tbody>
             <tr>
                 <td>
-                    <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
+                    <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/tanaymask.jpg" >
                     <div>
                         <button onclick="mask()">Mask</button>
                         <button onclick="nomask()">No Mask</button>
@@ -39,3 +42,4 @@
             </tr>
 </body>
 </html>
+{% endblock %}
