--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,7 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Team Name" %}
+{% set basename = "Nighthawk Coding" %}
 {% set github = "https://github.com/nighthawkcoders" %}
 {% set twitter = "https://twitter.com/NighthawkCoding" %}
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
@@ -15,11 +15,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
     <style>
         :root{
             --white: #fed2b9;
@@ -28,6 +23,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         html, body{
+            margin: 0;
             height: 100%;
             animation: fadein 2s;
             -moz-animation: fadein 2s; /* Firefox */
@@ -35,10 +31,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -o-animation: fadein 2s; /* Opera */
             background-color: var(--grey);
             color: var(--white);
-            z-index: 5;
         }
-
-
 
         .dark-mode {
             background-color: var(--white);
@@ -102,7 +95,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .row{
             margin: auto;
         }
-        sidenav {
+        .sidenav {
             height: 100%;
             top: 7.75%;
             width: 200px;
@@ -110,19 +103,15 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             background-color: #1da1f2;
             overflow-x: hidden;
             padding-top: 20px;
-            z-index: 0;
-            alignment: left;
         }
 
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
-
-    <sidenav>
-        <a href="/leah/">Leah</a>
-        <br>
-        <a href="/evan/">Evan</a>
-    </sidenav>
+    <div class="sidenav">
+        <p>this is working :D</p>
+        <a href="stub.html">stub</a>
+    </div>
 
 </head>
 
@@ -130,6 +119,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
+
+
 <div class="container-fluid">
     <div class="row justify-content-end" style="padding: 2%;">
         <div class="col-2" style="text-align: right;">
