--- a/templates/layouts/project.html
+++ b/templates/layouts/project.html
@@ -1,21 +1,166 @@
-{% extends "layouts/base.html" %}
-<!-- Custom block for standardizing Project Data-->
-{% block links %}
-    <div class="col-3">
-        <a href="{{ overview }}" class="btn">Overview</a>
+<!-- Custom file for standardizing Project Data
+This HTML is setup as as a Jinja2 layout, coders use layouts for:
+ ... standardization of style
+ ... setting expectations for data
+ ... code reuse
+-->
+<!DOCTYPE HTML>
+<html lang="en">
+
+{% set basename = "Nighthawk Coding" %}
+{% set github = "https://github.com/nighthawkcoders" %}
+{% set twitter = "https://twitter.com/NighthawkCoding" %}
+{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        :root{
+            --white: #fed2b9;
+            --black: #ceb680;
+            --grey: #64483f;
+        }
+
+        html, body{
+            margin: 0;
+            height: 100%;
+            animation: fadein 2s;
+            -moz-animation: fadein 2s; /* Firefox */
+            -webkit-animation: fadein 2s; /* Safari and Chrome */
+            -o-animation: fadein 2s; /* Opera */
+            background-color: var(--grey);
+            color: var(--white);
+        }
+
+        .dark-mode {
+            background-color: var(--white);
+            color: var(--black);
+        }
+
+        h1{
+            font-size: 5em;
+        }
+
+        a {
+            color: midnightblue;
+        }
+
+        .fa{
+            font-size: 3em;
+            letter-spacing: 1em;
+            transition: all .2s;
+            color: white;
+        }
+
+        .fa:hover{
+            transform: translateY(10px);
+        }
+
+        .fa-youtube-play:hover{
+            color: #cc0000;
+        }
+
+        .fa-twitter:hover{
+            color: #1da1f2;
+        }
+
+        .fa-github:hover{
+            color: #000000;
+        }
+
+        .btn:link,
+        .btn:visited {
+            text-transform: uppercase;
+            text-decoration: none;
+            padding: 15px 40px;
+            display: inline-block;
+            border-radius: 100px;
+            transition: all .2s;
+            position: absolute;
+            color: white;
+            font-size: 2.5em;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
+        }
+
+        .btn:active {
+            transform: translateY(-1px);
+            box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
+        }
+
+        .row{
+            margin: auto;
+        }
+        .sidenav {
+            height: 100%;
+            top: 7.75%;
+            width: 200px;
+            position: fixed;
+            background-color: #1da1f2;
+            overflow-x: hidden;
+            padding-top: 20px;
+        }
+
+    </style>
+
+    <title>{{ basename }} | {{ project }} </title>
+    <div class="sidenav">
+        <p>this is working :D</p>
+        <a href="stub.html">stub</a>
     </div>
 
-    <div class="col-3">
-        <a href="{{ scrumboard }}" class="btn">Scrum Board</a>
+</head>
+
+<body>
+{% include "layouts/navbar.html" %}
+
+{% block body %}
+
+
+<div class="container-fluid">
+    <div class="row justify-content-end" style="padding: 2%;">
+        <div class="col-2" style="text-align: right;">
+            {% block info %}
+                <!-- notice jinja style variables used in href's -->
+                <a><h5>{{basename}}</h5></a>
+                <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
+                <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
+                <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
+            {% endblock %}
+        </div>
     </div>
 
-    <div class="col-3">
-        <a href="{{ repo }}" class="btn">Repository</a>
-    </div>
+    <div class="product" style="margin-top: 2%;">
+        <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
 
-    <div class="col-3">
-        <a href="{{ authors }}" class="btn">Authors</a>
+            <div class="col-8" >
+                <h1>{{ project }} Project</h1>
+            </div>
+
+        </div>
+
+        <div class="row" style="padding-left: 10%;">
+            {% block links %}
+            <div class="col-3">
+                <a href="{{ overview }}" class="btn">Overview</a>
+            </div>
+
+            <div class="col-3">
+                <a href="{{ repo }}" class="btn">Repository</a>
+            </div>
+            {% endblock %}
+        </div>
+
     </div>
+</div>
 {% endblock %}
+
+</body>
+
+
 
 </html>
