--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -97,12 +97,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
         .sidenav {
             height: 100%;
-            top: 7.75%;
             width: 200px;
             position: fixed;
             background-color: #1da1f2;
             overflow-x: hidden;
             padding-top: 20px;
+            z-index: 0;
         }
 
     </style>
