--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -33,6 +33,11 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href="/stub">Stub</a>
         </div>
     </div>
+    <style>
+        navbar {
+            z-index: 2;
+        }
+    </style>
 </nav>
 
 
