--- a/templates/leah.html
+++ b/templates/leah.html
@@ -8,9 +8,13 @@
 {% block body %}
     <!- Try building a new body here ->
     <p>hopefully this shows up------------------------------------------------------------------------------------------</p>
+<img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHVwcHklMjBkb2d8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80">
     <style>
         p {
-            margin-left: 200px;
+            margin-left: 250px;
+        }
+        img {
+            margin-left: 250px;
         }
     </style>
 {% endblock %}
