--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,7 +20,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <a class="dropdown-item" href="/evan/">Evan</a>
                         <a class="dropdown-item" href="/leah/">Leah</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/">Evan</a>
+                        <a class="dropdown-item" href="/evan">Evan</a>
                         <a class="dropdown-item" href="/">Leah</a>
                         <a class="dropdown-item" href="/">Vunsh</a>
                         <a class="dropdown-item" href="/">Sanjay</a>
