Remade my about me page

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -38,8 +38,9 @@
         and my younger sister Josephine</p>
     <p class="fun">Well now that you know you many fun things about me you should feel alot better,
         But if not, idk how you wouldn't, but if you don't some how...</p>
-    <p class="fun"> go to study you're probably stressed because of that test/quiz/something you have coming up so go to (insert website name here)
-        and work for that grade you deserve. (insert website name here) is an amazing website full of study
+    <p class="fun"> go to study you're probably stressed because of that test/quiz/something you have coming up so go to (insert website name here) </p>
+       <p> and work for that grade you deserve. (insert website name here) </p>
+        <p> is an amazing website full of study
         resources it's also made by some really cool people, including me! ;) </p>
 
 
