Have the skeleton of a changing picture

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -16,13 +16,24 @@
     .mee{
         position: relative;
     left: 755px;
-        font-size: 30px;
+        font-size: 30px;}
 
-
+    .card {
+        width: 130px;
+        height: 130px;
+        position: relative;
+        left: 755px;
+        background: url("https://www.adesso.com/wp-content/uploads/2020/06/PPE-100_1.jpg") no-repeat;
+        display: inline-block;
+    }
+    .card:hover {
+        background: url("images/card-front.jpg") no-repeat;
     }
 
 
 </style>
+
+<div class="card"></div>
 
 <br>
 
