Have the skeleton of a changing picture

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -21,8 +21,9 @@
     .card {
         width: 130px;
         height: 130px;
+        top: 555px;
         position: relative;
-        left: 755px;
+        left: 775px;
         background: url("https://www.adesso.com/wp-content/uploads/2020/06/PPE-100_1.jpg") no-repeat;
         display: inline-block;
     }
