--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -115,7 +115,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <title>{{ basename }} | {{ project }} </title>
     <div class="sidenav">
         <p>this is working :D</p>
-        <a href="stub.html">stub</a>
+        <a href="/leah">leah</a>
+        <br>
+        <a href="/evan">evan</a>
     </div>
 
 </head>
