--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,6 +13,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
             <a class="nav-link" href={{ url_for('genius') }}>Genius API</a>
             <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
+            <a class="nav-link" href={{ url_for('khushi') }}>Khushi</a>
+
             <a class="nav-link" href="/stub">Stub</a>
 
 
